// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`dashboardEmailTemplates > HTML email structure > HTML template snapshots > cancellation HTML structure matches snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
</head>
<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #464645; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #BAB6A2;">
  <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
    <div style="background: rgba(186, 182, 162, 0.9); padding: 40px 30px; text-align: center; border-bottom: 3px solid #464645;">
      <h1 style="margin: 0; font-size: 28px; color: #464645;">Reservation Cancelled</h1>
    </div>
    
    <div style="padding: 40px 30px; background-color: #fff;">
      <p>Dear John,</p>
      
      <p>Your reservation from March 1, 2026 to March 3, 2026 has been cancelled.</p>
      
      <div style="background: rgba(200, 100, 100, 0.1); border-left: 4px solid rgba(200, 100, 100, 0.8); padding: 20px; border-radius: 8px; margin: 30px 0;">
        <p style="margin: 0;">Test reason</p>
      </div>
      
      <p>We apologize for any inconvenience.</p>
      
      <p style="margin: 20px 0 0 0;">
        Best regards,<br>
        <strong>Ryan and Lacey</strong>
      </p>
    </div>
  </div>
</body>
</html>"
`;

exports[`dashboardEmailTemplates > HTML email structure > HTML template snapshots > custom message HTML structure matches snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
</head>
<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #464645; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #BAB6A2;">
  <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,1,0.1);">
    <div style="background: rgba(186, 182, 162, 0.9); padding: 40px 30px; text-align: center; border-bottom: 3px solid #464645;">
      <h1 style="margin: 0; font-size: 28px; color: #464645;">Message from The Druids Den</h1>
    </div>
    
    <div style="padding: 40px 30px; background-color: #fff;">
      <p>Hi John,</p>
      
      <div style="background: rgba(186, 182, 162, 0.1); border-left: 4px solid #464645; padding: 20px; border-radius: 8px; margin: 30px 0; white-space: pre-wrap;">
Test message
      </div>
      
      <p style="margin: 20px 0 0 0;">
        Best regards,<br>
        <strong>Ryan and Lacey</strong>
      </p>
    </div>
  </div>
</body>
</html>"
`;

exports[`dashboardEmailTemplates > HTML email structure > HTML template snapshots > denial HTML structure matches snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
</head>
<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #464645; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #BAB6A2;">
  <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
    <div style="background: rgba(186, 182, 162, 0.9); padding: 40px 30px; text-align: center; border-bottom: 3px solid #464645;">
      <h1 style="margin: 0; font-size: 28px; color: #464645;">Reservation Update</h1>
    </div>
    
    <div style="padding: 40px 30px; background-color: #fff;">
      <p>Dear John,</p>
      
      <p>Thank you for your interest in staying at The Druids Den from March 1, 2026 to March 3, 2026.</p>
      
      <div style="background: rgba(200, 100, 100, 0.1); border-left: 4px solid rgba(200, 100, 100, 0.8); padding: 20px; border-radius: 8px; margin: 30px 0;">
        <p style="margin: 0;">Test reason</p>
      </div>
      
      <p>We hope to host you in the future!</p>
      
      <p style="margin: 20px 0 0 0;">
        Best regards,<br>
        <strong>Ryan and Lacey</strong>
      </p>
    </div>
  </div>
</body>
</html>"
`;

exports[`dashboardEmailTemplates > HTML email structure > HTML template snapshots > post-checkout HTML structure matches snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
</head>
<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #464645; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #BAB6A2;">
  <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
    <div style="background: linear-gradient(135deg, rgba(107, 142, 111, 0.9) 0%, rgba(107, 142, 111, 0.85) 100%); padding: 40px 30px; text-align: center; border-bottom: 3px solid #4a6b4d;">
      <h1 style="margin: 0; font-size: 32px; font-weight: 600; color: white;">🌲 Thank You! 🌲</h1>
    </div>
    
    <div style="padding: 40px 30px; background-color: #fff;">
      <p>Dear John,</p>
      
      <p>We hope you enjoyed your stay from March 1, 2026 to March 3, 2026.</p>
      
      <p>Your feedback helps us improve and helps future guests know what to expect. We'd love to hear about your experience!</p>
      
      <div style="text-align: center; margin: 30px 0;">
        <a href="https://druidsdenwi.com/feedback/res-123" style="display: inline-block; background: #6b8e6f; color: white; padding: 15px 40px; text-decoration: none; border-radius: 8px; font-weight: 600; font-size: 18px;">Share Your Feedback</a>
      </div>
      
      <p style="margin: 30px 0 0 0;">
        Best regards,<br>
        <strong>Ryan and Lacey</strong>
      </p>
    </div>
  </div>
</body>
</html>"
`;

exports[`dashboardEmailTemplates > HTML email structure > HTML template snapshots > pre-arrival HTML structure matches snapshot 1`] = `
"<!DOCTYPE html>
<html>
<head>
  <meta charset="utf-8">
  <meta name="viewport" content="width=device-width, initial-scale=1.0">
</head>
<body style="font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; line-height: 1.6; color: #464645; max-width: 600px; margin: 0 auto; padding: 20px; background-color: #BAB6A2;">
  <div style="background: white; border-radius: 12px; overflow: hidden; box-shadow: 0 2px 8px rgba(0,0,0,0.1);">
    <div style="background: linear-gradient(135deg, rgba(107, 142, 111, 0.9) 0%, rgba(107, 142, 111, 0.85) 100%); padding: 40px 30px; text-align: center; border-bottom: 3px solid #4a6b4d;">
      <h1 style="margin: 0; font-size: 32px; font-weight: 600; color: white;">🌲 Welcome! 🌲</h1>
    </div>
    
    <div style="padding: 40px 30px; background-color: #fff;">
      <p style="margin: 0 0 20px 0;">Hi John,</p>
      
      <div style="background: #6b8e6f; color: white; padding: 25px; border-radius: 8px; margin: 30px 0;">
        <h2 style="margin: 0 0 20px 0; color: white;">🔑 Access Information</h2>
        <p style="font-size: 20px; margin: 15px 0; font-weight: 600;">Door Code: CODE123</p>
        <p style="font-size: 20px; margin: 15px 0; font-weight: 600;">WiFi: WiFiPass</p>
      </div>
      
      <p>Check-in: 3:00 PM on March 1, 2026</p>
      
      <p style="margin: 20px 0 0 0;">
        Best regards,<br>
        <strong>Ryan and Lacey</strong>
      </p>
    </div>
  </div>
</body>
</html>"
`;
